@@ -1,0 +1,2 @@
+#DEP  src/erl-tools/gmt-bom                  *
+#DEP  src/erl-tools/ubf                      *
