@@ -3,8 +3,50 @@ This is ubf-thrift, a framework for integrating UBF, TBF, and Thrift.
 This repository depends on the ubf open source repository.
 
 
-To build
-========
+To download
+===========
+
+1. Get and install Git
+   http://git-scm.com/
+
+  and then append the following lines to your ~/.gitconfig file:
+
+    [url "git://github.com/norton/gmt-bom.git"]
+         insteadOf = git://github.com/norton/src/erl-tools/gmt-bom.git
+    [url "git://github.com/norton/ubf.git"]
+         insteadOf = git://github.com/norton/src/erl-tools/ubf.git
+    [url "git://github.com/norton/ubf-thrift.git"]
+         insteadOf = git://github.com/norton/src/erl-tools/ubf-thrift.git
+
+  NOTE: UBF requires git version 1.7.x or newer.  UBF has been tested
+  most recently with git version 1.7.1.1.
+
+2. Download the 'bom.sh' tool and then download UBF
+
+    $ mkdir -p ~/work/ubf-thrift
+    $ cd ~/work/ubf-thrift
+    $ git clone git@github.com:norton/bom.git .
+    $ env BOM_GIT=git://github.com/norton/ \
+      ./bom.sh co src/erl-tools/ubf-thrift
+
+  NOTE: The Bill of Materials (BOM) system is a way to manage the
+  builds of heterougeneous products with shared components using GIT,
+  GIT-SVN, SVN, or CVS.  BOM maintains hierarchical dependencies
+  between modules stored in a source code repository.  BOM is
+  implemented using bash, make, and other UNIX tools.
+
+  NOTE: The bom.sh commands 'diff' and 'status' can be used to check
+  the differences and status of all components, respectively.  Type
+  './bom.sh help' for further information.
+
+  NOTE: The BOM system was originally developed by Gemini Mobile
+  Technologies as an in-house tool to build and to package it's own
+  commercial products.  BOM as been open-sourced as one of the helper
+  tools for UBF.
+
+
+To build - basic recipe
+=======================
 
 1. Get and install an erlang system
    http://www.erlang.org
@@ -12,24 +54,60 @@ To build
    NOTE: UBF requires Erlang/OTP R13B01 or newer.  UBF has been tested
    most recently with Erlang/OTP R13B04.
 
-2. Get and install ubf
-   http://github.com/norton/ubf
-   
-3. Change to the src directory and type make
-   $ cd src
-   $ make
+2. Change to your working directory and create the toplevel Makefile
+   $ cd ~/work/ubf-thrift
+   $ ./bom.sh make
 
-4. Run the unit test
-   $ make check
+3. Build UBF
+   $ make ERL=/usr/local/hibari/ert/R13B04/bin/erl
+     OR
+   $ make ERL=/usr/local/hibari/ert/R13B04/bin/erl DEBUG="+debug_info"
+
+   NOTE: Please specify the path to your erlang system's erl
+   executable.
+
+   NOTE: DEBUG="+debug_info" will produce DEBUG enabled beam files.
+
+4. Run the unit tests
+   $ make ERL=/usr/local/hibari/ert/R13B04/bin/erl test
 
 
-**NOTE**
+To build - optional features
+============================
 
-Before make, edit "src/Makefile" to change the "MY_UBF_EBIN" variable
-to point to where the ebin directory that contains ubf's .beam files
-and the "MY_UBF_INCLUDE" variable to point to where the include
-directory that contains ubf's .hrl files.  Then run "make".
-   
+A. Run unit test for one module.
+
+   $ make ERL=/usr/local/hibari/ert/R13B04/bin/erl \
+     DEBUG="+debug_info" \
+     -C src/erl-tools/ubf-thrift__HEAD/src check
+
+B. Clean one module
+
+   $ make ERL=/usr/local/hibari/ert/R13B04/bin/erl \
+     DEBUG="+debug_info" \
+     -C src/erl-tools/ubf-thrift__HEAD/src clean
+
+C. Rebuild one module
+
+   $ make ERL=/usr/local/hibari/ert/R13B04/bin/erl \
+     DEBUG="+debug_info" \
+     -C src/erl-tools/ubf-thrift__HEAD/src
+
+D. Generate EDocs for one module
+
+   $ make ERL=/usr/local/hibari/ert/R13B04/bin/erl \
+     DEBUG="+debug_info" \
+     -C src/erl-tools/ubf-thrift__HEAD/src edoc
+
+E. Run dialyzer for one module (and it dependencies)
+
+   $ make ERL=/usr/local/hibari/ert/R13B04/bin/erl \
+     DEBUG="+debug_info" \
+     -C src/erl-tools/ubf-thrift__HEAD/src run-dialyzer
+
+   NOTE: Dialyzer will not work unless all beam files have been
+   compiled with debug information.
+
    
 Documentation -- Where should I start?
 ======================================
